main_app/static/styles/main.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap');


:root {
    --main-bg-color: rgb(46, 44, 45);
    --link-color: rgb(159,86,166);
    --nav-height: 45px;
}

* {
    padding: 0;
    margin: 0;
}

body {
    display: flex;
    height: max-content;
    flex-direction: column;
    font-family: 'Raleway', sans-serif;
    align-items: center;
}

main {
    flex: 1 0 auto;
    max-width: 1270px;
}

.page-footer {
    padding-top: 0;
}

header {
    height: var(--nav-height);
}

header, footer {
    width: 100%;
}

nav {
    background-color: var(--main-bg-color);
    height: 100%;
}

nav a.button-collapse, nav a.button-collapse i {
    height: var(--nav-height);
    line-height: var(--nav-height);
}

.nav-wrapper {
    height: 100%;
}

nav .brand-logo {
    width: fit-content;
    height: 100%;
    margin-left: 10px;;
    display: flex;
    align-items: center;
}

.navlink a {
    font-size: 16px;
    font-weight: bold;
    letter-spacing: 1px;
    height: var(--nav-height);
    display: flex;
    align-items: center;
}

nav ul li.active {
    background-color: transparent;
    text-decoration: underline;
    font-weight: 600;
    text-decoration-thickness: 2px;
    text-underline-offset: 6px;
}

nav ul li.active a {
    color: var(--link-color);
}

nav ul li:hover {
    background-color: rgba(0, 0, 0, 0.3);
}

#title {
    font-family: 'Raleway', sans-serif;
    padding: 0 10px;
    font-size: 27px;
}

.flower {
    height: 38px;
}

.dahlia {
    height: 45px;
    animation: rotate 20s linear infinite;
}

@keyframes rotate {
    to{ transform: rotate(360deg); }
}

.page-footer {
    background-color: var(--main-bg-color);
}

.footer-copyright {
    display: flex;
    justify-content: space-between;
    margin: 0 15px;
}

.footer-copyright span a {
    color: var(--link-color);
    font-weight: bold;
}

.page-header {
    height: 86vh;
    overflow: hidden;
    display: flex;
    align-content: center;
    width: 100%;
}

.page-header img {
    width: 100%;
    object-fit: cover;
}

#performers-header {
    object-position: bottom;
}

#about-header {
    object-position: calc(1321/2560 * 100%) calc(812/2612 * 100%);
}

.outer-box {
    display: block;
    height: 120px;
    width: 100%;
    transform: translateY(-50%);
    z-index: 10;
}

.inner-box {
    background-color: var(--main-bg-color);
    color: white;
    position: absolute;
    bottom: 0;
    right: 0;
    width: 90%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.headline {
    text-align: center;
    font-size: 30px;
    line-height: 1.3;
    letter-spacing: 1.5px;
}

h3.headline {
    margin: 0 0 5px 0;
}

.headline span {
    font-style: italic;
    font-weight: bolder;
}

#created-by {
    font-style: normal;
    font-size: 18px;
    line-height: 1;
    text-align: center;
    padding-bottom: 5px;
}

#expand_more {
    animation: bounce 2s infinite;
    margin-left: 50px;
}

@keyframes bounce {
    0%, 100% {
        transform: translateY(0);
    }
    50% {
        transform: translateY(-7px);
    }
}

h1 {
    margin: 5px 0 8px 0;
}

h4 {
    margin-top: 0;
}

h4 a {
    color: black;
}

h4 a:hover {
    color: var(--link-color);
}

.horizontal, .horizontal img {
    max-height: 300px;
}

audio {
    width: 100%;
}

audio::-webkit-media-controls-panel {
    background-color: #dfe6e9;
}

audio:focus {
    outline: none;
}

#plays-box {
    margin-top: -45px;
    margin-left: 10%;
    margin-right: 10%;
    padding-bottom: 15px;
}

#latest-play {
    display: flex;
    align-items: center;
}

#latest-play h3 {
    margin-top: 0;
}

#latest-play-info {
    margin-left: 25px;
    text-align: center;
}

#latest-play-description {
    min-height: 30%;
}

.row .col {
    padding: 0;
}

.row  {
    display: flex;
    margin-bottom: 0;
}

#past-plays-box {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    grid-gap: 10px;
}

.card {
    height: 47vh;
    display: inline-block;
    background-color: var(--main-bg-color);
}

.card .card-action {
    padding: 16px 24px;
}

.card-image img {
    height: 39.5vh;
    object-fit: cover;
}

.card-content {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    color: white;
}

.card-content a {
    color: white;
}

.card-content a:hover {
    color: var(--link-color);
}

.audio {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

/* SECTION EPISODE DETAIL PAGE */

.play {
    text-align: center;
}

.play p {
    margin-bottom: .6rem;
}

hr {
    border: black solid 1px;
    margin-top: 14px;
}

.logos {
    font-size: 25px;
    margin-top: 10px;
    height: 54px;
    width: 80%;
    display: flex;
    justify-content: space-between;
    text-align: center;
    position: relative;
    overflow: hidden;
    transition: transform .3s linear;
    border-radius: 30px;
}

.logos:hover {
    transform: scale(1.1);
}

.logos a {
    flex: 1;
    background-color: #dfe6e9;
    color:#1f1f1f;
    display: flex;
    align-items: center;
    justify-content: center;
    transform: translate(-100%);
    opacity: 0;
    transition: .3s linear;
    overflow: hidden;
    outline: hidden;
}

.logos:hover a {
    transform: translateX(0);
    opacity: 1;
}

.logos a:hover {
    transform: scale(1.3);
    color: #f1f1f1;
}

#apple-podcast-logo:hover {
    background-color: rgb(168,76,215);
}

#spotify-podcast-logo:hover {
    background-color: rgb(76,175,80);
}

#google-podcast-logo:hover {
    background-color: rgb(66,133,244);
}

#stitcher-podcast-logo img {
    width: 35px;
}

#stitcher-podcast-logo:hover {
    background-color: rgb(243,192,23);
}

#logo-cover {
    position: absolute;
    z-index: 2;
    background-color: var(--main-bg-color);
    height: 100%;
    width: 100%;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.6em;
    transition: .4s linear;
    font-size: 25px;
    line-height: 1;
}

.logos:hover #logo-cover {
    transform: translateX(-105%);
}

#logo-cover span {
    padding-left: 10px;
}

.side-image {
    max-width: 50%;
    height: auto;
}

#performer-avatar-container {
    display: flex;
    justify-content: space-around;
}

.card .card-content.play-title {
    padding: 2.5vh;
}

.performer-link {
    background-color: var(--main-bg-color);
    color: white;
    border-radius: 25px;
    padding: 10px;
}

.performer-link:hover {
    color: var(--link-color);
}

/* SECTION PERFORMER BIOS PAGE */

.performers-outer-box {
    height: 65px;
}

h3#performer-headline {
    font-size: 35px;
    margin: 0;
}

.performer-chevron {
    font-size: 50px;
}

.performers-container {
    margin: 0 10%;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.performer-card {
    width: 49%;
    height: revert;
}

.performer-card .card-content {
    padding-bottom: 16px;
}

.card .card-content .card-title {
    display: contents;
}

#featured-plays span {
    color: white;
    margin-right: 10px;
    display: block;
}

#featured-plays div {
    display: inline-flex;
    flex-wrap: wrap;
}

#nothing-performer, #nothing-play {
    text-align: center;
    margin-bottom: 10vh;
}

.performer-icon {
    color: var(--link-color);
    font-size: 32px;
}

.fa-imdb {
    font-size: 37px;
}

.fa-user {
    padding-bottom: 5px;
    cursor: pointer;
}

.performer-icon-line {
    display: flex;
    align-items: center;
    width: 72px;
    justify-content: space-between;
}

.performer-icon-line, .imdb {
    padding-top: 5px;
}

.card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating) {
    color: var(--link-color);
    text-transform: none;
    font-weight: bold;
}

.performer-icon:hover, .card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating):hover {
    color: white;
}

/* SECTION ABOUT PAGE */

#creator-content, .about-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 6vh;
}

#poem {
    text-align: center;
}

#byline {
    font-size: 12px;
    line-height: 2.5;
}

#backstory {
    margin: 3vh 6vh 15px;
}

#poem, #tagline {
    font-style: italic;
}

#backstory h5 {
    margin-top: 0;
}

#art-credits {
    font-size: 18px;
    text-align: center;
    display: flex;
}

.play-title {
    font-style: italic;
}

#about-content h4 {
    text-align: center;
    margin: 0 8px;
}

#creators-headline {
    display: flex;
    align-items: center;
    margin-bottom: 5vh;
}

#creator-container {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    justify-content: space-around;
}

.creator-square {
    background-color: var(--main-bg-color);
    width: 48%;
    height: fit-content;
    color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.creator-square p {
    padding: 15px;
    text-align: justify;
}

#creator-container h4 {
    margin-top: 2.5vh;
}

h5 {
    text-align: center;
    font-size: 1.5rem;
}

p.creator-bio p {
    padding: 15px;
    color: white;
}

.creator-contacts {
    flex-direction: row;
    width: 100%;
    height: 6vh;
    border-top: 1px solid rgba(160,160,160,0.2);
}

.creator-contacts a {
    color: var(--link-color);
}

.creator-contacts a:hover {
    color: white;
}

